# scribble-reader

./: .containerignore  .editorconfig  .env  .gitignore  .rustfmt.toml  Cargo.toml  Containerfile  LICENSE  README.md  bacon.toml  build.sh  justfile  logcat.sh
.cargo/: config.toml
.github/workflows/: build.yml  checks.yml  ci.yml  pr.yml  release.yml
app-android/: Cargo.toml
app-android/app/: build.gradle
app-android/app/src/main/: AndroidManifest.xml
app-android/app/src/main/java/org/lotrax/scribblereader/: MainActivity.kt
app-android/src/: lib.rs
crates/app-android/: Cargo.toml  build.gradle
crates/app-android/app/: build.gradle
crates/app-android/app/src/main/java/org/lotrax/scribblereader/: MainActivity.kt
crates/app-android/gradle/wrapper/: gradle-wrapper.properties
crates/app-android/src/: lib.rs
crates/illustrator/: Cargo.toml
crates/illustrator/src/: cache.rs  html_parser.rs  layout.rs  lib.rs  svg.rs
crates/main/: Cargo.toml
crates/main/src/: fps_calculator.rs  gestures.rs  lib.rs  main.rs
crates/main/src/renderer/: gui_renderer.rs  mod.rs  painter.rs
crates/main/src/renderer/pixmap_renderer/: mod.rs
crates/main/src/ui/: mod.rs  theme.rs
crates/main/src/views/: experiments.rs  library.rs  mod.rs
crates/main/src/views/reader/: active_areas.rs  mod.rs
crates/pixelator/: Cargo.toml
crates/pixelator/src/: lib.rs  renderer.rs  shader.wgsl  textures.rs
crates/scribe/: Cargo.toml
crates/scribe-epub/: Cargo.toml
crates/scribe-epub/src/: lib.rs
crates/scribe/src/: config.rs  epub.rs  lib.rs  library.rs  record_keeper.rs  records.rs  settings.rs
crates/sculpter/: Cargo.toml
crates/sculpter/src/: fonts.rs  lib.rs  lines.rs  printer.rs  shaper.rs
crates/wrangler/: Cargo.toml
crates/wrangler/src/: lib.rs
illustrator/: Cargo.toml
illustrator/src/: cache.rs  error.rs  html_parser.rs  layout.rs  lib.rs  meta.rs  svg.rs
main/: Cargo.toml  README.md
main/src/: active_areas.rs  fonts.rs  gestures.rs  gui.rs  lib.rs  main.rs  renderer.rs
main/src/renderer/: glyphon_renderer.rs  gui_renderer.rs  mod.rs  painter.rs
main/src/renderer/pixmap_renderer/: mod.rs  shader.wgsl
main/src/scribe/: library.rs  mod.rs  secret_records.rs  secret_storage.rs  settings.rs
main/src/ui/: mod.rs  theme.rs
main/src/views/: experiments.rs  library.rs  mod.rs
main/src/views/reader/: active_areas.rs  mod.rs
reader/: Cargo.toml
reader/src/: lib.rs
scribe/: Cargo.toml
scribe/src/: epub.rs  lib.rs  library.rs  record_keeper.rs  secret_records.rs  secret_storage.rs  settings.rs
sculpter/: Cargo.toml
sculpter/src/: error.rs  fonts.rs  layout.rs  lib.rs  lines.rs  printer.rs  shape.rs  shaper.rs
wrangler/: Cargo.toml
wrangler/src/: content.rs  lib.rs
