[workspace]
resolver = "3"
members = ["crates/main", "crates/illustrator", "crates/scribe", "crates/sculpter", "crates/app-android", "crates/wrangler", "crates/scribe-epub"]

[workspace.package]
version = "0.1.8"
authors = ["ksonny <ksonny@lotrax.org>"]
edition = "2024"

[workspace.dependencies]
ab_glyph = "0.2.32"
android_logger = "0.15.1"
bitflags = { version = "2.10.0", features = ["bytemuck"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
chrono = { version = "0.4.44", default-features = false, features = ["alloc", "clock", "now", "std", "serde"] }
config = { version = "0.15.22", default-features = false, features = ["toml"] }
dotenv = "0.15.0"
egui = "0.34.1"
egui-wgpu = "0.34.1"
egui-winit = "0.34.1"
egui_extras = { version = "0.34.1", features = ["image"] }
env_logger = "0.11.8"
etagere = "0.3.0"
expand-tilde = "0.6.1"
fixed = "1.31.0"
html5ever = "0.39.0"
image = { version = "0.25.10", features = ["png", "jpeg", "ico"] }
imagesize = { version = "0.14.0", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
integer-sqrt = "0.1.5"
jni = "0.22.4"
lazy_static = "1.5.0"
log = "0.4.28"
lucide-icons = "1.7.0"
pollster = "0.4.0"
quick-xml = { version = "0.39.2", features = ["serialize", "escape-html"] }
resvg = { version = "0.47.0", default-features = false, features = ["raster-images"] }
rusqlite = { version = "0.39.0", features = ["bundled", "blob", "rusqlite-macros", "chrono"] }
rusqlite_migration = "2.3.0"
rustybuzz = "0.20.1"
serde = { version = "1.0.226", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_rusqlite = "0.42.0"
taffy = { version = "0.10.0", default-features = false, features = ["alloc", "std", "block_layout", "taffy_tree", "content_size"] }
thiserror = "2.0.17"
toml = "1.1.2"
ttf-parser = "0.25.1"
wgpu = "29.0.1"
winit = "0.30.13"
xdg = "3.0.0"
zip = "8.5.0"

illustrator = { path = "./crates/illustrator" }
scribble-reader = { path = "./crates/main" }
scribe = {  path = "./crates/scribe" }
scribe-epub = {  path = "./crates/scribe-epub" }
sculpter = {  path = "./crates/sculpter" }
wrangler = { path = "./crates/wrangler" }

[profile.dev-opt]
inherits = "dev"
opt-level = 1
overflow-checks = false

[profile.release]
lto = "thin"

[patch.crates-io]
winit = { git = "https://github.com/ksonny/winit", rev = "3dfe4bd368ea8763e902653ef598e219d2a0dccd" }
egui = { git = "https://github.com/ksonny/egui", rev = "2543404253469eed5bba3d70600dbd77d5c9ffe0" }
egui-wgpu = { git = "https://github.com/ksonny/egui/", rev = "2543404253469eed5bba3d70600dbd77d5c9ffe0" }
egui-winit = { git = "https://github.com/ksonny/egui", rev = "2543404253469eed5bba3d70600dbd77d5c9ffe0" }
egui_extras = { git = "https://github.com/ksonny/egui", rev = "2543404253469eed5bba3d70600dbd77d5c9ffe0" }
