[package]
name = "illustrator"
version = "0.1.1"
authors = ["ksonny <ksonny@lotrax.org>"]
edition = "2024"
publish = false

[dependencies]
bitflags.workspace = true
config.workspace = true
fixed.workspace = true
html5ever.workspace = true
imagesize.workspace = true
log.workspace = true
resvg.workspace = true
scribe.workspace = true
sculpter.workspace = true
taffy.workspace = true
thiserror.workspace = true
zip.workspace = true

mime = "0.3.17"
epub = "2.1.5"
serde.workspace = true
quick-xml.workspace = true

[dev-dependencies]
env_logger.workspace = true
