[package]
name = "scribble-reader"
version = "0.1.0"
authors = ["ksonny <ksonny@lotrax.org>"]
edition = "2024"
publish = false

[dependencies]
chrono = { workspace = true }
config = { workspace = true }
cosmic-text = { workspace = true }
dotenv = "0.15.0"
egui = "0.33.0"
egui-wgpu = "0.32.3"
egui-winit = "0.32.3"
egui_extras = { version = "0.32.3", features = ["image"] }
env_logger = { workspace = true }
glyphon = "0.9.0"
illustrator = { version = "0.1.0", path = "../illustrator" }
image = { workspace = true }
integer-sqrt = "0.1.5"
lazy_static = "1.5.0"
log = { workspace = true }
lucide-icons = "0.545.0"
pollster = "0.4.0"
rusqlite = { version = "0.37.0", features = ["bundled", "blob", "rusqlite-macros", "chrono"] }
rusqlite_migration = "2.3.0"
scribe = { version = "0.1.0", path = "../scribe" }
serde = { workspace = true }
serde_rusqlite = "0.40.0"
thiserror = { workspace = true }
wgpu = "25.0.2"
xdg = "3.0.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version = "0.30.12" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
winit = { version = "0.30.12", features = ["android-native-activity"] }

[[bin]]
# Rename the bin to avoid https://github.com/rust-lang/cargo/issues/6313
name = "scribble-reader-desktop"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.android.signing.release]
path = "./path/to/KeyStoreFile.jks"
keystore_password = "password"

[package.metadata.android.signing.dev-opt]
path = "/home/ksonny/.android/debug.keystore"
keystore_password = "android"

[[package.metadata.android.uses_permission]]
name = "android.permission.MANAGE_EXTERNAL_STORAGE"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
resources = "resources"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[[package.metadata.android.queries.provider]]
authorities = "org.khronos.openxr.runtime_broker;org.khronos.openxr.system_runtime_broker"
# Note: The `name` attribute is normally not required for a queries provider, but is non-optional
# as a workaround for aapt throwing errors about missing `android:name` attribute.
# This will be made optional if/when cargo-apk migrates to aapt2.
name = "org.khronos.openxr"

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
label = "Scribble Reader"
extract_native_libs = true
uses_cleartext_traffic = true

