[package]
name = "scribble-reader"
version = "0.1.1"
authors = ["ksonny <ksonny@lotrax.org>"]
edition = "2024"
publish = false

[dependencies]
bitflags = { version = "2.10.0", features = ["bytemuck"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
chrono.workspace = true
config.workspace = true
dotenv = "0.15.0"
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
env_logger.workspace = true
illustrator.workspace = true
image.workspace = true
integer-sqrt = "0.1.5"
lazy_static = "1.5.0"
log.workspace = true
lucide-icons = "0.575.0"
pollster = "0.4.0"
rusqlite = { version = "0.37.0", features = ["bundled", "blob", "rusqlite-macros", "chrono"] }
rusqlite_migration = "2.3.0"
scribe.workspace = true
sculpter.workspace = true
serde.workspace = true
serde_rusqlite = "0.40.0"
thiserror.workspace = true
wgpu = "27.0.1"
xdg = "3.0.0"
winit.workspace = true
