[package]
name = "scribble-reader"
version = "0.1.1"
authors = ["ksonny <ksonny@lotrax.org>"]
edition = "2024"
publish = false

[dependencies]
bitflags.workspace = true
bytemuck.workspace = true
chrono.workspace = true
config.workspace = true
dotenv.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui_extras.workspace = true
env_logger.workspace = true
expand-tilde.workspace = true
illustrator.workspace = true
image.workspace = true
integer-sqrt.workspace = true
lazy_static.workspace = true
log.workspace = true
lucide-icons.workspace = true
pollster.workspace = true
scribe.workspace = true
sculpter.workspace = true
thiserror.workspace = true
wgpu.workspace = true
winit.workspace = true
wrangler.workspace = true
xdg.workspace = true
