[package]
name = "scribe"
version = "0.1.1"
authors = ["ksonny <ksonny@lotrax.org>"]
edition = "2024"
publish = false


[dependencies]
chrono.workspace = true
config.workspace = true
fixed.workspace = true
image.workspace = true
log.workspace = true
quick-xml.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
serde.workspace = true
serde_rusqlite.workspace = true
thiserror.workspace = true
toml.workspace = true
wrangler.workspace = true
zip.workspace = true
