[package]
name = "sculpter"
version = "0.1.1"
authors = ["ksonny <ksonny@lotrax.org>"]
edition = "2024"
publish = false

[dependencies]
ab_glyph = "0.2.32"
etagere = "0.2.15"
fixed.workspace = true
image.workspace = true
log.workspace = true
rustybuzz = "0.20.1"
thiserror.workspace = true
ttf-parser.workspace = true
