[package]
name = "sculpter"
version = "0.1.3"
authors = ["ksonny <ksonny@lotrax.org>"]
edition = "2024"
publish = false

[dependencies]
ab_glyph.workspace = true
etagere.workspace = true
fixed.workspace = true
image.workspace = true
log.workspace = true
rustybuzz.workspace = true
thiserror.workspace = true
ttf-parser.workspace = true
