[package]
name = "scribble-reader-android"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
android_logger.workspace = true
jni.workspace = true
log.workspace = true
scribble-reader.workspace = true
scribe.workspace = true
winit = { workspace = true, features = ["android-game-activity"] }
wrangler.workspace = true

[lib]
name = "main"
crate-type = ["cdylib"]

