[package]
name = "illustrator"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bitflags.workspace = true
fixed.workspace = true
html5ever.workspace = true
imagesize.workspace = true
log.workspace = true
pollster.workspace = true
resvg.workspace = true
scribe-epub.workspace = true
scribe.workspace = true
sculpter.workspace = true
taffy.workspace = true
thiserror.workspace = true
wrangler.workspace = true
zip.workspace = true
pixelator.workspace = true

[dev-dependencies]
env_logger.workspace = true
