[package]
name = "scribble-reader"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
chrono.workspace = true
config.workspace = true
dotenv.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui_extras.workspace = true
env_logger.workspace = true
illustrator.workspace = true
image.workspace = true
integer-sqrt.workspace = true
lazy_static.workspace = true
log.workspace = true
lucide-icons.workspace = true
pixelator.workspace = true
pollster.workspace = true
scribe.workspace = true
sculpter.workspace = true
serde.workspace = true
thiserror.workspace = true
wgpu.workspace = true
winit.workspace = true
wrangler.workspace = true
xdg.workspace = true
