[package]
name = "scribe"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false


[dependencies]
chrono.workspace = true
config.workspace = true
fixed.workspace = true
image.workspace = true
log.workspace = true
quick-xml.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
scribe-epub.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_rusqlite.workspace = true
thiserror.workspace = true
wrangler.workspace = true
zip.workspace = true
