[package]
name = "sculpter"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
ab_glyph.workspace = true
etagere.workspace = true
fixed.workspace = true
image.workspace = true
log.workspace = true
rustybuzz.workspace = true
thiserror.workspace = true
ttf-parser.workspace = true
